--- a/python-lib/line_protocol/codegen/header.jinja2
+++ b/python-lib/line_protocol/codegen/header.jinja2
@@ -4,23 +4,22 @@
 #include <stdint.h>
 #include <stdbool.h>
 
-#define LINE_NETWORK_{{network.name}}_BAUDRATE {{network.baudrate}}
+{% for channel in channels %}
+#define LINE_CHANNEL_{{channel.name}} {{channel.channel}}
+#define LINE_NETWORK_{{channel.name}}_BAUDRATE {{channel.network.baudrate}}
 
-{% for node in network.nodes %}
-#define LINE_NODE_{{node.name}}_DIAG_ADDRESS 0x{{'%01X' % node.address}}
-{% endfor %}
+{% for node in channel.nodes %}
 
-{% for request in node.publishes %}
+{%- if node.diagnostics %}
+#define LINE_NODE_{{node.node.name}}_DIAG_ADDRESS 0x{{'%01X' % node.node.address}}
+{% endif %}
+
+/* Published frames */
+{%- for request in node.node.publishes %}
+#ifndef LINE_REQUEST_{{request.name}}_ID
 #define LINE_REQUEST_{{request.name}}_ID 0x{{'%04X' % request.id}}
 #define LINE_REQUEST_{{request.name}}_SIZE {{request.size}}
-{% endfor %}
 
-{% for request in node.subscribes %}
-#define LINE_REQUEST_{{request.name}}_ID 0x{{'%04X' % request.id}}
-#define LINE_REQUEST_{{request.name}}_SIZE {{request.size}}
-{% endfor %}
-
-{% for request in node.publishes -%}
 typedef union {
     struct {
     {%- set position = namespace(value=0) -%}
@@ -29,11 +28,11 @@ typedef union {
         unsigned int reserved_{{loop.index}} : {{signal.offset - position.value}};
         {% endif %}
 
-        {% if signal.width <= 8 %}
+        {%- if signal.width <= 8 %}
         uint8_t {{signal.name}} : {{signal.width}};
-        {% elif signal.width <= 16 %}
+        {%- elif signal.width <= 16 %}
         uint16_t {{signal.name}} : {{signal.width}};
-        {% elif signal.width <= 32 %}
+        {%- elif signal.width <= 32 %}
         uint32_t {{signal.name}} : {{signal.width}};
         {% endif %}
 
@@ -52,13 +51,52 @@ typedef union {
 extern LINE_Frame_{{request.name}}_t LINE_Request_{{request.name}}_data;
 
 bool LINE_Request_{{request.name}}_flag(void);
-
-{% for signal in request.signals|sort(attribute='offset') -%}
-#define LINE_SET_{{request.name}}_{{signal.name}}_SIGNAL(value) LINE_{{request.name}}_data.fields.{{signal.name}} = value;
+#endif
 {% endfor %}
-{%- endfor %}
 
-{%- for encoder in network.encoders %}
+/* Subscribed frames */
+{%- for request in node.node.subscribes %}
+#ifndef LINE_REQUEST_{{request.name}}_ID
+#define LINE_REQUEST_{{request.name}}_ID 0x{{'%04X' % request.id}}
+#define LINE_REQUEST_{{request.name}}_SIZE {{request.size}}
+
+typedef union {
+    struct {
+    {%- set position = namespace(value=0) -%}
+    {% for signal in request.signals|sort(attribute='offset') -%}
+        {% if signal.offset > position.value -%}
+        unsigned int reserved_{{loop.index}} : {{signal.offset - position.value}};
+        {% endif %}
+        
+        {%- if signal.width <= 8 %}
+        uint8_t {{signal.name}} : {{signal.width}};
+        {%- elif signal.width <= 16 %}
+        uint16_t {{signal.name}} : {{signal.width}};
+        {%- elif signal.width <= 32 %}
+        uint32_t {{signal.name}} : {{signal.width}};
+        {% endif %}
+
+        {%- set position.value = position.value + signal.width -%}
+    {%- endfor %}
+    {%- if position.value < request.size * 8 %}
+        unsigned int _end : {{request.size * 8 - position.value}};
+    {%- endif %}
+    } fields;
+    uint8_t data[{{request.size}}];
+} LINE_Frame_{{request.name}}_t;
+
+// TODO: verify union length
+// assert sizeof(LINE_{{request.name}}_Frame_t == {{request.size}})
+
+extern LINE_Frame_{{request.name}}_t LINE_Request_{{request.name}}_data;
+
+bool LINE_Request_{{request.name}}_flag(void);
+#endif
+{% endfor %}
+
+{% endfor %}
+
+{%- for encoder in channel.network.encoders %}
 {%- if "FormulaEncoder" in encoder.__class__.__name__ %}
 #define LINE_ENCODER_{{encoder.name}}_Encode(value) ((value - {{encoder.offset}}) / {{encoder.scale}})
 #define LINE_ENCODER_{{encoder.name}}_Decode(value) (value * {{encoder.scale}} + {{encoder.offset}})
@@ -69,38 +107,6 @@ bool LINE_Request_{{request.name}}_flag(void);
 {% endif %}
 {% endfor %}
 
-{% for request in node.subscribes -%}
-typedef union {
-    struct {
-    {%- set position = namespace(value=0) -%}
-    {% for signal in request.signals|sort(attribute='offset') -%}
-        {% if signal.offset > position.value -%}
-        unsigned int reserved_{{loop.index}} : {{signal.offset - position.value}};
-        {% endif %}
-        
-        {% if signal.width <= 8 %}
-        uint8_t {{signal.name}} : {{signal.width}};
-        {% elif signal.width <= 16 %}
-        uint16_t {{signal.name}} : {{signal.width}};
-        {% elif signal.width <= 32 %}
-        uint32_t {{signal.name}} : {{signal.width}};
-        {% endif %}
-
-        {%- set position.value = position.value + signal.width -%}
-    {%- endfor %}
-    {%- if position.value < request.size * 8 %}
-        unsigned int _end : {{request.size * 8 - position.value}};
-    {%- endif %}
-    } fields;
-    uint8_t data[{{request.size}}];
-} LINE_Frame_{{request.name}}_t;
-
-// TODO: verify union length
-// assert sizeof(LINE_{{request.name}}_Frame_t == {{request.size}})
-
-extern LINE_Frame_{{request.name}}_t LINE_Request_{{request.name}}_data;
-
-bool LINE_Request_{{request.name}}_flag(void);
 {% endfor %}
 
 #endif
