--- a/python-lib/line_protocol/codegen/source.jinja2
+++ b/python-lib/line_protocol/codegen/source.jinja2
@@ -1,28 +1,73 @@
+#include "line_transport.h"
 #include "line_application.h"
 #include "line_api.h"
 
-{% for request in node.publishes %}
+{% for channel in channels %}
+{% for node in channel.nodes %}
+{% for request in node.node.publishes %}
+#ifndef LINE_REQUEST_{{request.name}}_FRAME_DEFINED
+#define LINE_REQUEST_{{request.name}}_FRAME_DEFINED
 LINE_Frame_{{request.name}}_t LINE_Request_{{request.name}}_data;
 bool LINE_Request_{{request.name}}_flag_internal;
+#endif
 {% endfor %}
 
-{% for request in node.subscribes %}
+{% for request in node.node.subscribes %}
+#ifndef LINE_REQUEST_{{request.name}}_FRAME_DEFINED
+#define LINE_REQUEST_{{request.name}}_FRAME_DEFINED
 LINE_Frame_{{request.name}}_t LINE_Request_{{request.name}}_data;
 bool LINE_Request_{{request.name}}_flag_internal;
+#endif
+{% endfor %}
+{% endfor %}
 {% endfor %}
 
-bool LINE_API_RespondsTo(uint16_t request) {
-    {% for request in node.publishes %}
+void LINE_App_Init(void) {
+    {% for channel in channels %}
+    LINE_Transport_Init({{channel.channel}}, {{channel.one_wire}});
+    {% endfor %}
+}
+
+void LINE_App_OnRequest(uint8_t channel, uint16_t request, uint8_t size, uint8_t* payload) {
+    {% for channel in channels %}
+    {% for node in channel.nodes %}
+    {% for request in node.node.subscribes %}
+    #ifndef LINE_REQUEST_{{request.name}}_ONREQUEST_HANDLED
+    #define LINE_REQUEST_{{request.name}}_ONREQUEST_HANDLED
     if (request == LINE_REQUEST_{{request.name}}_ID) {
+        // TODO: reject request if size doesn't equal the request size
+        for (int i = 0; i < LINE_REQUEST_{{request.name}}_SIZE; i++) {
+            LINE_Request_{{request.name}}_data.data[i] = payload[i];
+        }
+        LINE_Request_{{request.name}}_flag_internal = true;
+        return;
+    }
+    #endif
+    {% endfor %}
+    {% endfor %}
+    {% endfor %}
+}
+
+bool LINE_App_RespondsTo(uint8_t channel, uint16_t request) {
+    {% for channel in channels %}
+    {% for node in channel.nodes %}
+    {%- for request in node.node.publishes %}
+    if (channel == LINE_CHANNEL_{{channel.name}} && request == LINE_REQUEST_{{request.name}}_ID) {
         return true;
     }
+    {% endfor %}
+    {% endfor %}
     {% endfor %}
     return false;
 }
 
-bool LINE_API_PrepareResponse(uint16_t request, uint8_t* size, uint8_t* payload) {
-    {% for request in node.publishes %}
-    if (request == LINE_REQUEST_{{request.name}}_ID) {
+bool LINE_App_PrepareResponse(uint8_t channel, uint16_t request, uint8_t* size, uint8_t* payload) {
+    {% for channel in channels %}
+    {% for node in channel.nodes %}
+    {%- for request in node.node.publishes %}
+    #ifndef LINE_REQUEST_{{request.name}}_PREPARERESPONSE_HANDLED
+    #define LINE_REQUEST_{{request.name}}_PREPARERESPONSE_HANDLED
+    if (channel == LINE_CHANNEL_{{channel.name}} && request == LINE_REQUEST_{{request.name}}_ID) {
         *size = LINE_REQUEST_{{request.name}}_SIZE;
         for (int i = 0; i < LINE_REQUEST_{{request.name}}_SIZE; i++) {
             payload[i] = LINE_Request_{{request.name}}_data.data[i];
@@ -30,32 +75,18 @@ bool LINE_API_PrepareResponse(uint16_t request, uint8_t* size, uint8_t* payload)
         LINE_Request_{{request.name}}_flag_internal = true;
         return true;
     }
+    #endif
+    {% endfor %}
+    {% endfor %}
     {% endfor %}
     return false;
 }
 
-bool LINE_API_ListensTo(uint16_t request) {
-    {% for request in node.subscribes %}
-    if (request == LINE_REQUEST_{{request.name}}_ID) {
-        return true;
-    }
-    {% endfor %}
-    return false;
-}
-
-void LINE_API_OnRequest(uint16_t request, uint8_t size, uint8_t* payload) {
-    {% for request in node.subscribes %}
-    if (request == LINE_REQUEST_{{request.name}}_ID) {
-        // TODO: reject request if size doesn't equal the request size
-        for (int i = 0; i < LINE_REQUEST_{{request.name}}_SIZE; i++) {
-            LINE_Request_{{request.name}}_data.data[i] = payload[i];
-        }
-        LINE_Request_{{request.name}}_flag_internal = true;
-    }
-    {% endfor %}
-}
-
-{% for request in node.subscribes %}
+{% for channel in channels %}
+{% for node in channel.nodes %}
+{% for request in node.node.publishes %}
+#ifndef LINE_REQUEST_{{request.name}}_FLAG_DEFINED
+#define LINE_REQUEST_{{request.name}}_FLAG_DEFINED
 bool LINE_Request_{{request.name}}_flag(void) {
     if (LINE_Request_{{request.name}}_flag_internal) {
         LINE_Request_{{request.name}}_flag_internal = false;
@@ -63,9 +94,16 @@ bool LINE_Request_{{request.name}}_flag(void) {
     }
     return false;
 }
+#endif
+{% endfor %}
+{% endfor %}
 {% endfor %}
 
-{% for request in node.publishes %}
+{% for channel in channels %}
+{% for node in channel.nodes %}
+{% for request in node.node.subscribes %}
+#ifndef LINE_REQUEST_{{request.name}}_FLAG_DEFINED
+#define LINE_REQUEST_{{request.name}}_FLAG_DEFINED
 bool LINE_Request_{{request.name}}_flag(void) {
     if (LINE_Request_{{request.name}}_flag_internal) {
         LINE_Request_{{request.name}}_flag_internal = false;
@@ -73,4 +111,7 @@ bool LINE_Request_{{request.name}}_flag(void) {
     }
     return false;
 }
+#endif
+{% endfor %}
+{% endfor %}
 {% endfor %}
