--- a/python-lib/line_protocol/codegen/header.jinja2
+++ b/python-lib/line_protocol/codegen/header.jinja2
@@ -10,7 +10,7 @@
 
 {% for node in channel.nodes %}
 
-{% if diag_settings.enabled %}
+{% if node.diagnostics.enabled %}
 #define LINE_NODE_{{node.node.name}}_DIAG_ADDRESS 0x{{'%01X' % node.node.address}}
 void LINE_Diag_{{channel.name}}_{{node.node.name}}_OnWakeup(void);
 void LINE_Diag_{{channel.name}}_{{node.node.name}}_OnIdle(void);
