--- a/python-lib/line_protocol/codegen/source.jinja2
+++ b/python-lib/line_protocol/codegen/source.jinja2
@@ -27,23 +27,27 @@ bool LINE_Request_{{request.name}}_flag_internal;
 {% for node in channel.nodes %}
     {% if node.diagnostics.enabled %}
 static LINE_Diag_Config_t LINE_DiagConfig_{{channel.name}}_{{node.node.name}} = {
-    .transport_channel = {{channel}},
+    .transport_channel = {{channel.channel}},
 
     {% if node.diagnostics.initAddress is boolean %}
-    .initAddress = {{ node.node.address if node.diagnostics.initAddress else 'LINE_DIAG_UNICAST_UNASSIGNED_ID' }},
+        {% if node.diagnostics.initAddress %}
+    .address = LINE_NODE_{{node.node.name}}_DIAG_ADDRESS,
+        {% else %}
+    .address = LINE_DIAG_UNICAST_UNASSIGNED_ID,
+        {% endif %}
     {% else %}
-    .initAddress = {{ node.diagnostics.initAddress }},
+    .address = {{ node.diagnostics.initAddress }},
     {% endif %}
 
-    on_wakeup = LINE_Diag_{{channel.name}}_{{node.node.name}}_OnWakeup,
-    on_idle = LINE_Diag_{{channel.name}}_{{node.node.name}}_OnIdle,
-    on_shutdown = LINE_Diag_{{channel.name}}_{{node.node.name}}_OnShutdown,
-    on_conditional_change_address = LINE_Diag_{{channel.name}}_{{node.node.name}}_OnConditionalChangeAddress,
+    .on_wakeup = LINE_Diag_{{channel.name}}_{{node.node.name}}_OnWakeup,
+    .on_idle = LINE_Diag_{{channel.name}}_{{node.node.name}}_OnIdle,
+    .on_shutdown = LINE_Diag_{{channel.name}}_{{node.node.name}}_OnShutdown,
+    .on_conditional_change_address = LINE_Diag_{{channel.name}}_{{node.node.name}}_OnConditionalChangeAddress,
 
-    op_status = LINE_Diag_{{channel.name}}_{{node.node.name}}_GetOperationStatus,
-    power_status = LINE_Diag_{{channel.name}}_{{node.node.name}}_GetPowerStatus,
-    serial_number = LINE_Diag_{{channel.name}}_{{node.node.name}}_GetSerialNumber,
-    software_version = LINE_Diag_{{channel.name}}_{{node.node.name}}_GetSoftwareVersion,
+    .op_status = LINE_Diag_{{channel.name}}_{{node.node.name}}_GetOperationStatus,
+    .power_status = LINE_Diag_{{channel.name}}_{{node.node.name}}_GetPowerStatus,
+    .serial_number = LINE_Diag_{{channel.name}}_{{node.node.name}}_GetSerialNumber,
+    .software_version = LINE_Diag_{{channel.name}}_{{node.node.name}}_GetSoftwareVersion,
 };
     {% endif %}
 {% endfor %}
