Python library rework (#6)
## Brief

- Documentation mostly done, C API is also documented
- Reworked master buffer interfaces (node status and signals)
- Version number synchronized across all (Python, documentation, CMake
and Arduino)
- Some testing done on the Python library

--- a/python-lib/line_protocol/codegen/header.jinja2
+++ b/python-lib/line_protocol/codegen/header.jinja2
@@ -18,6 +18,7 @@ extern "C"
 {% for node in channel.nodes %}
 
 {% if node.diagnostics.enabled %}
+#define LINE_NODE_{{node.node.name}}_DIAG_CHANNEL {{node.diagnostics.diag_channel}}
 #define LINE_NODE_{{node.node.name}}_DIAG_ADDRESS 0x{{'%01X' % node.node.address}}
 void LINE_Diag_{{channel.name}}_{{node.node.name}}_OnWakeup(void);
 void LINE_Diag_{{channel.name}}_{{node.node.name}}_OnIdle(void);
